syntax = "proto3";
package card;

message ShahrazadCard {
    string card_name = 1;
    string location = 2;
    bool token = 3;
    ShahrazadCardState state = 4;
    string owner = 5;
}

message ShahrazadCardState {
    repeated ShahrazadCounter counters = 1;
    optional bool flipped = 2;
    optional bool inverted = 3;
    optional bool tapped = 4;
    optional bool face_down = 5;
    repeated string revealed = 6;
    uint32 x = 7;
    uint32 y = 8;
}

message ShahrazadCounter {
    string counter_type = 1;
    int32 count = 2;
}
