syntax = "proto3";
package playmat;

message ShahrazadPlayer {
    string display_name = 1;
}

message ShahrazadPlaymat {
    string library = 1;
    string hand = 2;
    string graveyard = 3;
    string battlefield = 4;
    string exile = 5;
    string command = 6;
    string sideboard = 7;
    int32 life = 8;
    int32 mulligans = 9;
    map<string, int32> command_damage = 10;
    ShahrazadPlayer player = 11;
}